Cards alignment issue fixed

--- a/frontend/src/app/pannels/public-user/components/pages/auth/AuthPages.css
+++ b/frontend/src/app/pannels/public-user/components/pages/auth/AuthPages.css
@@ -1,17 +1,21 @@
+.container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+  background: transparent !important;
+}
+
 .auth-page-wrapper {
   background-color: #EAF6F1;
   min-height: calc(100vh - 150px);
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 10px;
+  padding: 20px 40px;
   font-family: 'Public Sans', sans-serif;
   margin-top: -200px;
 }
 
 .main-card {
   width: 100%;
-  max-width: 1100px;
+  max-width: 1060px;
   background: #fff;
   border-radius: 25px;
   box-shadow: 0 20px 40px rgba(0, 0, 0, 0.08);
